--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
+			
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
